ES6 Classes: Extends should accept an expression without parenthesis https://bugs.webkit.org/show_bug.cgi?id=142840

Reviewed by Ryosuke Niwa.

Source/JavaScriptCore:

* parser/Parser.cpp:
(JSC::Parser<LexerType>::parseClass):
"extends" allows a LeftHandExpression (new expression / call expression,
which includes a member expression), not a primary expression. Our
parseMemberExpression does all of these.

LayoutTests:

* js/class-syntax-extends-expected.txt:
* js/script-tests/class-syntax-extends.js:
Extend the test to test cases of extends with different types of expressions.

Canonical link: https://commits.webkit.org/160874@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@181724 268f45cc-cd09-0410-ab3c-d52691b4dbfc